<resources>
    <string name="comm_name">Name:</string>
    <string name="general_countdown">General Countdown</string>
    <string name="decrease">Decrease</string>
    <string name="increase">Increase</string>
    <string name="zero">ZERO</string>
    <string name="general_days_left">General Days Left:</string>
    <string name="days">- / -</string>
    <string name="left_photo_arrow"><![CDATA[<<]]></string>
    <string name="right_photo_arrow"><![CDATA[>>]]></string>
</resources>