<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.MainActivity">
    <com.google.android.material.imageview.ShapeableImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/general_countdown"
        android:textSize="40sp"
        android:textStyle="bold|italic"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/main_card"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_centerInParent="true"
        android:backgroundTint="#02DCE4"
        app:cardCornerRadius="50dp"
        android:layout_margin="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
           >
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/main_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/general_days_left"
                android:layout_centerHorizontal="true"
                android:layout_marginVertical="10dp"
                android:textSize="32sp"/>


            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/main_LLC"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/main_title"
                android:layout_centerInParent="true"
                android:layout_centerVertical="true"
                android:layout_marginTop="0dp">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/main_left"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/left_photo_arrow"
                    android:textSize="24sp"/>


                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/main_pic"
                    android:layout_width="200dp"
                    android:layout_height="200dp"/>


                <com.google.android.material.button.MaterialButton
                    android:id="@+id/main_right"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/right_photo_arrow"
                    android:textSize="24sp"/>
            </androidx.appcompat.widget.LinearLayoutCompat>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/main_daysBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/days"
                android:layout_below="@+id/main_LLC"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="32dp"
                android:textSize="32sp"
                android:textStyle="bold"/>


        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_below="@+id/main_card"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="50dp"

        >

        <com.google.android.material.button.MaterialButton
            android:id="@+id/main_decrease"

            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:backgroundTint="#EC1717"
            android:textColor="#ffffff"
            android:text="@string/decrease" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/main_zero"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginHorizontal="10dp"
            android:backgroundTint="#176CEC"
            android:textColor="#ffffff"
            android:text="@string/zero"

            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/main_increase"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:backgroundTint="#26A32C"
            android:text="@string/increase"
            android:textColor="#ffffff"
            />


    </androidx.appcompat.widget.LinearLayoutCompat>



</RelativeLayout>